--- a/auth-tutorial/package.json
+++ b/auth-tutorial/package.json
@@ -26,11 +26,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.372.0",
     "next": "14.2.1",
     "next-auth": "^5.0.0-beta.16",
     "nextjs-toploader": "^1.6.11",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
