--- a/auth-tutorial/package.json
+++ b/auth-tutorial/package.json
@@ -30,12 +30,12 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.372.0",
-    "next": "14.2.1",
+    "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.16",
     "nextjs-toploader": "^1.6.11",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
@@ -51,7 +51,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.4.1",
