--- a/auth-tutorial/package.json
+++ b/auth-tutorial/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-qr-code": "^2.0.14",
     "react-to-print": "^2.15.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
