--- a/auth-tutorial/package.json
+++ b/auth-tutorial/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.5",
     "lucide-react": "^0.372.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.16",
