--- a/auth-tutorial/package.json
+++ b/auth-tutorial/package.json
@@ -42,6 +42,9 @@
     "react-icons": "^5.1.0",
     "react-qr-code": "^2.0.14",
     "react-to-print": "^2.15.1",
+    "react-use": "^17.5.0",
+    "recharts": "^2.12.7",
+    "rizzui": "^0.8.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.5",
